fixed z-index of back-to-top button

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -24,6 +24,7 @@
     //   background-color: transparent;
     background-color: rgba(255, 255, 255, 0.652);
     position: fixed;
+    z-index: 10;
     top: 85vh;
     left: 85vw;
     cursor: pointer;
