--- a/style.css
+++ b/style.css
@@ -602,6 +602,7 @@ a.footer__text {
   border: none;
   background-color: rgba(255, 255, 255, 0.652);
   position: fixed;
+  z-index: 10;
   top: 85vh;
   left: 85vw;
   cursor: pointer;
